--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,46 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+    background-color: #282c34;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: calc(10px + 2vmin);
+    color: white;
 }
 
-.App-link {
-  color: #61dafb;
+main {
+    padding: 1em;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+footer {
+    background-color: #282c34;
+    text-align: center;
+    color: white;
+     padding: 1em;
 }
+
+header nav {
+    display: flex;
+    flex-direction: row;
+}
+header nav a {
+    color: hotpink;
+    padding: 0.2em 1em;
+    border:  1px solid gray;
+    flex: 1 1 auto;
+    /* flex-grow flex-shrink flex-basis */
+}
+header nav a:hover {
+    background-color: gray;
+}
+
+header nav a.active {
+    background-color: white;
+    border-bottom: none;
+}
+
+
+
+
+
+/*  */
